# news.adayroi.jp-scraper

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.py  run_scraper.bat  setup_dev.py
src/: config.py  exceptions.py  logging_config.py  main.py  pipeline.py
src/core/: deploy.py  gemini.py  image.py  scraper.py
src/models/: new_feed.py
src/utils/: execute.py  file.py  html.py  log.py
tests/: __init__.py  test_config.py  test_exceptions.py  test_models.py  test_utils.py
